baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__02_parser__unicode_strings.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "UnicodeStrings"
    L_BRACE "{"
    FIELD
      WORD "emoji_basic"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "🎉"
            QUOTE """
            ERROR_TOKEN "🎉"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "emoji_multiple"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "🎉🎊🎈"
            QUOTE """
            ERROR_TOKEN "🎉"
            ERROR_TOKEN "🎊"
            ERROR_TOKEN "🎈"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "emoji_in_text"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "Hello 👋 World 🌍"
            QUOTE """
            WORD "Hello"
            ERROR_TOKEN "👋"
            WORD "World"
            ERROR_TOKEN "🌍"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "chinese"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "你好世界"
            QUOTE """
            ERROR_TOKEN "你"
            ERROR_TOKEN "好"
            ERROR_TOKEN "世"
            ERROR_TOKEN "界"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "arabic"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "مرحبا بالعالم"
            QUOTE """
            ERROR_TOKEN "م"
            ERROR_TOKEN "ر"
            ERROR_TOKEN "ح"
            ERROR_TOKEN "ب"
            ERROR_TOKEN "ا"
            ERROR_TOKEN "ب"
            ERROR_TOKEN "ا"
            ERROR_TOKEN "ل"
            ERROR_TOKEN "ع"
            ERROR_TOKEN "ا"
            ERROR_TOKEN "ل"
            ERROR_TOKEN "م"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "japanese"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "こんにちは世界"
            QUOTE """
            ERROR_TOKEN "こ"
            ERROR_TOKEN "ん"
            ERROR_TOKEN "に"
            ERROR_TOKEN "ち"
            ERROR_TOKEN "は"
            ERROR_TOKEN "世"
            ERROR_TOKEN "界"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "russian"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "Привет мир"
            QUOTE """
            ERROR_TOKEN "П"
            ERROR_TOKEN "р"
            ERROR_TOKEN "и"
            ERROR_TOKEN "в"
            ERROR_TOKEN "е"
            ERROR_TOKEN "т"
            ERROR_TOKEN "м"
            ERROR_TOKEN "и"
            ERROR_TOKEN "р"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "math_symbols"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "α + β = γ"
            QUOTE """
            ERROR_TOKEN "α"
            PLUS "+"
            ERROR_TOKEN "β"
            EQUALS "="
            ERROR_TOKEN "γ"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "currency"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "Price: €100 or $120 or ¥1000"
            QUOTE """
            WORD "Price"
            COLON ":"
            ERROR_TOKEN "€"
            INTEGER_LITERAL "100"
            WORD "or"
            DOLLAR "$"
            INTEGER_LITERAL "120"
            WORD "or"
            ERROR_TOKEN "¥"
            INTEGER_LITERAL "1000"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "arrows"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "→ ← ↑ ↓ ⇒ ⇐"
            QUOTE """
            ERROR_TOKEN "→"
            ERROR_TOKEN "←"
            ERROR_TOKEN "↑"
            ERROR_TOKEN "↓"
            ERROR_TOKEN "⇒"
            ERROR_TOKEN "⇐"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "zero_width"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "Hello​World"
            QUOTE """
            WORD "Hello"
            ERROR_TOKEN "​"
            WORD "World"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "rtl_override"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "‏Hello World‏"
            QUOTE """
            ERROR_TOKEN "‏"
            WORD "Hello"
            WORD "World"
            ERROR_TOKEN "‏"
            QUOTE """
          R_PAREN ")"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    ERROR_TOKEN "处"
    ERROR_TOKEN "理"
    ERROR_TOKEN "文"
    ERROR_TOKEN "本"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
  ERROR_TOKEN "输"
  ERROR_TOKEN "入"
  WORD "string"
  R_PAREN ")"
  ARROW "->"
  WORD "string"
  L_BRACE "{"
  CLIENT_DEF "client GPT4"
    KW_CLIENT "client"
    WORD "GPT4"
  WORD "prompt"
  HASH "#"
  QUOTE """
  WORD "Process"
  WORD "the"
  WORD "text"
  COLON ":"
  L_BRACE "{"
  L_BRACE "{"
  ERROR_TOKEN "输"
  ERROR_TOKEN "入"
  R_BRACE "}"
  R_BRACE "}"
  WORD "Return"
  WORD "result"
  WORD "with"
  WORD "emojis"
  COLON ":"
  ERROR_TOKEN "✅"
  WORD "or"
  ERROR_TOKEN "❌"
  QUOTE """
  HASH "#"
  R_BRACE "}"

=== ERRORS ===
Error: Expected function name, found error
    ╭─[ unicode_strings.baml:29:1 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │ ─┬─  
    │  ╰─── Expected function name, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected parameter name, found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected parameter name, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected type annotation, found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected type annotation, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected ')', found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected ')', found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected return type (->), found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected return type (->), found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected function body, found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected function body, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found error
    ╭─[ unicode_strings.baml:29:14 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │              ─┬─  
    │               ╰─── Expected top-level declaration, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found error
    ╭─[ unicode_strings.baml:29:17 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                 ─┬─  
    │                  ╰─── Expected top-level declaration, found error
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found identifier
    ╭─[ unicode_strings.baml:29:21 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                     ───┬──  
    │                        ╰──── Expected top-level declaration, found identifier
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found ')'
    ╭─[ unicode_strings.baml:29:27 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                           ┬  
    │                           ╰── Expected top-level declaration, found ')'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '->'
    ╭─[ unicode_strings.baml:29:29 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                             ─┬   
    │                              ╰─── Expected top-level declaration, found '->'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found identifier
    ╭─[ unicode_strings.baml:29:32 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                                ────┬───  
    │                                    ╰───── Expected top-level declaration, found identifier
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '{'
    ╭─[ unicode_strings.baml:30:1 ]
    │
 30 │   "#
    │ ┬  
    │ ╰── Expected top-level declaration, found '{'
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected config block, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found '#'

Error: Expected top-level declaration, found '"'

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found ':'

Error: Expected top-level declaration, found '{'

Error: Expected top-level declaration, found '{'

Error: Expected top-level declaration, found error

Error: Expected top-level declaration, found error

Error: Expected top-level declaration, found '}'

Error: Expected top-level declaration, found '}'

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found ':'

Error: Expected top-level declaration, found error

Error: Expected top-level declaration, found identifier

Error: Expected top-level declaration, found error

Error: Expected top-level declaration, found '"'

Error: Expected top-level declaration, found '#'

Error: Expected top-level declaration, found '}'
